# Flask-Babel-translation

./: .flaskenv  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  routes.py
app/templates/: index.html
app/translations/es/LC_MESSAGES/: messages.mo  messages.po
