[tool.poetry]
name = "babelDemo"
version = "0.1.0"
description = ""
authors = ["Namami Shanker <namami2011@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Babel = "^2.0.0"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
